# index_camera_passthrough

./: .gitmodules  Cargo.toml  LICENSE.txt  README.md  actions.json  flake.nix  generic_bindings.json  index_camera_passthrough.desktop  index_camera_passthrough.toml  knuckles_bindings.json  rust-toolchain.toml  sources.json  vive_controller_bindings.json
nix/: sources.json
openvr_sys/: Cargo.toml  build.rs
openvr_sys/src/: lib.rs
shaders/: projection.frag  projection.vert  stereo_correction.frag  trivial.vert  yuyv2rgb.frag
src/: config.rs  distortion_correction.rs  events.rs  main.rs  openvr.rs  pipeline.rs  projection.rs  steam.rs  utils.rs  vrapi.rs  yuv.rs
