[package]
name = "index_camera_passthrough"
description = "Camera passthrough for Valve Index on Linux"
authors = [ "Yuxuan Shui <yshuiv7@gmail.com>" ]
repository = "https://github.com/yshui/index_camera_passthrough"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.45"
ash = "0.37.0"
vulkano = "0.33.0"
image = "0.24.0"
openvr-sys2 = "0.1.0"
ctrlc = "3.2.1"
log = "0.4.14"
env_logger = "0.10.0"
v4l = "0.14.0"
udev = "0.7.0"
vulkano-shaders = "0.33.0"
thiserror = "1.0.30"
renderdoc = "0.11.0"
nalgebra = "0.32.2"
itertools = "0.11.0"
config = "0.13.0"
serde = { version = "1.0.130", features = ["derive"] }
argh = "0.1.6"
serde_json = "1.0.70"
xdg = "2.4.0"
toml = "0.7.3"
humantime-serde = "1.0.1"
bytemuck = { version = "^1.7", features = ["derive"] }
libloading = "0.8.0"

[build-dependencies]
anyhow = "1.0.45"
shaderc = "0.8.0"
