[package]
name = "index_camera_passthrough"
description = "Camera passthrough for Valve Index on Linux"
authors = [ "Yuxuan Shui <yshuiv7@gmail.com>" ]
repository = "https://github.com/yshui/index_camera_passthrough"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
ash = "0.37.0"
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano" }
image = "0.24.0"
openvr-sys2 = "0.1.3"
ctrlc = "3.2.1"
log = "0.4.14"
env_logger = "0.10.0"
v4l = "0.14.0"
udev = "0.8.0"
thiserror = "1.0.30"
renderdoc = "0.11.0"
nalgebra = "0.32.2"
itertools = "0.12.0"
config = "0.14.0"
serde = { version = "1.0.130", features = ["derive"] }
argh = "0.1.6"
serde_json = "1.0.70"
xdg = "2.4.0"
toml = "0.8.8"
humantime-serde = "1.0.1"
bytemuck = { version = "^1.7", features = ["derive"] }
libloading = "0.8.0"
cstr = "0.2.11"
openxr = "0.17.1"
smallvec = "1.11.2"

[build-dependencies]
anyhow = "1.0.45"
shaderc = "0.8.0"
