[package]
name = "openvr_sys"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1"
autocxx = "0"
nalgebra = "0.29"
num = "0.4.0"

[build-dependencies]
autocxx-build = { path = "../autocxx/gen/build" }

[patch.crates-io]
autocxx = { path = '../autocxx' }
autocxx-engine = { path = '../autocxx/engine' }
autocxx-parser = { path = '../autocxx/parser' }
