[package]
name = "openvr_sys"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.94"
autocxx = "0.25.0"
nalgebra = "0.32.0"
num = "0.4.0"

[build-dependencies]
autocxx-build = "0.25.0"
